fix mapping for only one month being persisted